--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+@font-face {
+    font-family: Roboto;
+    src: url("./Roboto-Regular.ttf");
+}
+
 *{
     border: 1px solid lightblue;
 }
 :root {
-    font-family: sans-serif;
+    font-family: "Roboto", sans-serif;
 
 }
 
